<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.campos0022715.labosindustrial.IntroCarrera"
    tools:showIn="@layout/app_bar_intro_carrera">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Ingenieria Industrial"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/department_introduction"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="17dp"
            android:gravity="left"
            android:text="Áreas de desempeño laboral en el país:"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/area_laboral1"
            android:textSize="17sp"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/area_laboral2"
            android:textSize="17sp"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/area_laboral3"
            android:textSize="17sp"
            android:textColor="@color/cardview_dark_background"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/area_laboral4"
            android:textSize="17sp"
            android:textColor="@color/cardview_dark_background"/>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
